add no exog results

--- a/code/results.ipynb
+++ b/code/results.ipynb
@@ -211,16 +211,20 @@
       "flat_rmse = []\n",
       "flat_rmse_ind = []\n",
       "flat_rmse_agg = []\n",
+      "flat_rmse_nex = []\n",
       "for (s, t) in stock_rmse.iteritems():\n",
       "    for (t1, v) in t.iteritems():\n",
       "        flat_rmse.append((':'.join([s,t1]), v))\n",
-      "        if t1.find(',') == -1:\n",
-      "            flat_rmse_ind.append((':'.join([s,t1]), v))\n",
-      "        else:\n",
+      "        if t1.find(',') >= 0:\n",
       "            flat_rmse_agg.append((':'.join([s,t1]), v))\n",
+      "        elif t1.find('[') >= 0:\n",
+      "            flat_rmse_nex.append((':'.join([s,t1]), v))\n",
+      "        else:\n",
+      "            flat_rmse_ind.append((':'.join([s,t1]), v))\n",
       "flat_rmse = sorted(flat_rmse, key=lambda x: x[1])\n",
       "flat_rmse_ind = sorted(flat_rmse_ind, key=lambda x: x[1])\n",
       "flat_rmse_agg = sorted(flat_rmse_agg, key=lambda x: x[1])"
+      "flat_rmse_nex = sorted(flat_rmse_nex, key=lambda x: x[1])"
      ],
      "language": "python",
      "metadata": {},
@@ -256,21 +260,26 @@
       "flat_rmse_values = map(lambda x: x[1], flat_rmse)\n",
       "flat_rmse_ind_values = map(lambda x: x[1], flat_rmse_ind)\n",
       "flat_rmse_agg_values = map(lambda x: x[1], flat_rmse_agg)\n",
+      "flat_rmse_nex_values = map(lambda x: x[1], flat_rmse_nex)\n",
       "print 'RMSE All', describe(flat_rmse_values)\n",
       "print 'RMSE Ind', describe(flat_rmse_ind_values)\n",
       "print 'RMSE Agg', describe(flat_rmse_agg_values)\n",
+      "print 'RMSE nEx', describe(flat_rmse_nex_values)\n",
       "\n",
       "# plot\n",
       "rmse = pd.DataFrame({ 'RMSE:All': flat_rmse_values })\n",
       "rmse_ind = pd.DataFrame({ 'RMSE:Ind': flat_rmse_ind_values })\n",
       "rmse_agg = pd.DataFrame({ 'RMSE:Agg': flat_rmse_agg_values })\n",
-      "fig, (ax1, ax2, ax3) = plt.subplots(3)\n",
+      "rmse_nex = pd.DataFrame({ 'RMSE:NoEx': flat_rmse_nex_values })\n",
+      "fig, (ax1, ax2, ax3, ax4) = plt.subplots(4)\n",
       "rmse.plot(ax=ax1, color='blue')\n",
       "rmse_ind.plot(ax=ax2, color='red')\n",
       "rmse_agg.plot(ax=ax3, color='green')\n",
+      "rmse_nex.plot(ax=ax4, color='black')\n",
       "ax1.xaxis.set_visible(False)\n",
       "ax2.xaxis.set_visible(False)\n",
       "ax3.xaxis.set_visible(False)\n",
+      "ax4.xaxis.set_visible(False)\n",
       "plt.show()"
      ],
      "language": "python",
@@ -305,6 +314,7 @@
       "rmse.hist(stacked=True, normed = True)\n",
       "rmse_ind.hist(stacked=True, normed = True)\n",
       "rmse_agg.hist(stacked=True, normed = True)\n",
+      "rmse_nex.hist(stacked=True, normed = True)\n",
       "plt.show()"
      ],
      "language": "python",
