--- a/code/results.ipynb
+++ b/code/results.ipynb
@@ -223,7 +223,7 @@
       "            flat_rmse_ind.append((':'.join([s,t1]), v))\n",
       "flat_rmse = sorted(flat_rmse, key=lambda x: x[1])\n",
       "flat_rmse_ind = sorted(flat_rmse_ind, key=lambda x: x[1])\n",
-      "flat_rmse_agg = sorted(flat_rmse_agg, key=lambda x: x[1])"
+      "flat_rmse_agg = sorted(flat_rmse_agg, key=lambda x: x[1])\n",
       "flat_rmse_nex = sorted(flat_rmse_nex, key=lambda x: x[1])"
      ],
      "language": "python",
